v0.19
	- Added cross-breeding of animals.

	- It is now theoretically possible to access most of the tech
	  tree in a Classic Superflat Challenge map, whereas without
	  the ability to tan leather, players were stuck on Tier 2
	  without being able to make sawmills.


v0.18
	- Plant cross-breeding is now more of a science than
	  just blind luck.  The species of plants/fungi you
	  breed will depend on the donor species surrounding
	  them.

	- Plants that differ by metadata but not block ID,
	  such as saplings, are now correctly recognized by
	  the cross-breeding system as different species.


v0.17
	- Most plants/fungi now obtainable, given dirt,
	  bonemeal, and a hoe.  Plants and fungi exposed to
	  other species will spread mutant strains into nearby
	  fertile spaces.

	- Dead shrubs are now renewable: boil the leaves off
	  an oak sapling.


v0.16
	- Lava source blocks are now renewable.  Lava will
	  melt nearby blocks of hellfire.

	- Lilypads can now grow on the highest level of flowing
	  water, as well as source blocks, so lilypad farming
	  will work with HCB even when water is extremely scarce.

	- Lilypad growth rate is now dependent on actual immediate
	  light level, even though they will remain in place as
	  long as they have a view of the sky.

	- Restored old pre-v0.12 heat logic for dirt/clay
	  farms, to be consistent with BTW pattern of using
	  a 3x3 fire source for max efficiency.

	- Improvements to clay/dirt farming SFX.

	- Slightly nerfed clay/dirt farming speed.


v0.15
	- Press for making soul sand must now be built out of
	  sufficiently hard materials.

	- Added risk to soul sand fabrication: the process is
	  now highly exothermic.


v0.14
	- Soul sand is now renewable.  Fresh souls extracted
	  from the living must be forced into sand at high
	  mechanical pressure.

	- Replaced mossy stone with cobblestone in netherrack
	  recipe, as moss stone is too expensive compared to
	  netherrack.


v0.13